some img add and home

--- a/Home.html
+++ b/Home.html
@@ -37,5 +37,74 @@
 			</div>
 		</div>
 	</header>
+	<section id="home-top-part">
+		<div class="home-top-bg">
+			<img src="media/top-bg-1.jpg" height="100%" width="100%">
+		</div>
+		<div class="top-name">
+			<h2>Ziaul Hugue</h2>
+			<h4>Scroll down</h4>
+		</div>
+	</section>
+	<section id="biography-description">
+		<div class="container">
+			<div class="biography-box">
+				<div class="col-6">
+					<div class="bio-left">
+						<h3>Biography & Awards</h3>
+						<h1>Honorable Mention (HM) Award, Transversalities: Photographs Without Borders, Portugal</h1>
+					</div>
+				</div>
+				<div class="col-6">
+					<div class="bio-right">
+						<h3>Alhamdulillah, I have been awarded Honorable Mention (HM) of ” Transversalities: Photography Without Borders” in International Photography Contest in Portugal on the theme of ” The city and the urbanization “. As an awardee, I’ll get about 150 Euro and other accessories. My portfolio photos will also be exhibited (printed) later.</h3>
+						<h3><a href="#">Read more...</a></h3>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<div class="devider" style="width: 90%;margin: auto; background:#3b4244;height: 1px;">
+		
+	</div>
+	<section id="inventual-info">
+		<div class="container">
+			<div class="col-4">
+				<div class="year-info">
+					<h1>1990</h1>
+					<h3>Vestibulum vitae mattis turpis fusce aliquam eu aliquam</h3>
+					<h4>Non ut consequat hendrerit neque at</h4>
+				</div>
+			</div>
+			<div class="col-4">
+				<div class="year-info">
+					<h1>1992</h1>
+					<h3>Vestibulum vitae mattis turpis fusce aliquam eu aliquam</h3>
+					<h4>Non ut consequat hendrerit neque at</h4>
+				</div>
+			</div>
+			<div class="col-4">
+				<div class="year-info">
+					<h1>1997</h1>
+					<h3>Vestibulum vitae mattis turpis fusce aliquam eu aliquam</h3>
+					<h4>Non ut consequat hendrerit neque at</h4>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="img-gellary-part">
+		<div class="container">
+			<div class="gellary-tittle">
+				<h3>Photography</h3>
+				<h2>Ziaul Hugue Some Awarded Photo Gallery</h2>
+			</div>
+			<div class="img-gellary">
+				<img src="media/img-3.jpg">
+				<img src="media/img-1.jpg">
+				<img src="media/img-2.jpg">
+
+			</div>
+		</div>
+	</section>
 </body>
 </html>
