Home page full complite with all css task

--- a/Home.html
+++ b/Home.html
@@ -10,7 +10,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Open+Sans&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
-<body style="background: #18181B;">
+<body style="background: #18181B;margin: 0;">
 	<header>
 		<div class="col-3">
 			<div class="header-logo">
@@ -58,7 +58,7 @@
 				<div class="col-6">
 					<div class="bio-right">
 						<h3>Alhamdulillah, I have been awarded Honorable Mention (HM) of ” Transversalities: Photography Without Borders” in International Photography Contest in Portugal on the theme of ” The city and the urbanization “. As an awardee, I’ll get about 150 Euro and other accessories. My portfolio photos will also be exhibited (printed) later.</h3>
-						<h3><a href="#">Read more...</a></h3>
+						<h3><a href="#">Read more<i class="fa-solid fa-arrow-right"></i></a></h3>
 					</div>
 				</div>
 			</div>
@@ -69,25 +69,27 @@
 	</div>
 	<section id="inventual-info">
 		<div class="container">
-			<div class="col-4">
-				<div class="year-info">
-					<h1>1990</h1>
-					<h3>Vestibulum vitae mattis turpis fusce aliquam eu aliquam</h3>
-					<h4>Non ut consequat hendrerit neque at</h4>
+			<div class="all-year-des">
+				<div class="col-4">
+					<div class="year-info">
+						<h1>1990</h1>
+						<h3>Vestibulum vitae mattis turpis fusce aliquam eu aliquam</h3>
+						<h4>Non ut consequat hendrerit neque at</h4>
+					</div>
 				</div>
-			</div>
-			<div class="col-4">
-				<div class="year-info">
-					<h1>1992</h1>
-					<h3>Vestibulum vitae mattis turpis fusce aliquam eu aliquam</h3>
-					<h4>Non ut consequat hendrerit neque at</h4>
+				<div class="col-4">
+					<div class="year-info">
+						<h1>1992</h1>
+						<h3>Vestibulum vitae mattis turpis fusce aliquam eu aliquam</h3>
+						<h4>Non ut consequat hendrerit neque at</h4>
+					</div>
 				</div>
-			</div>
-			<div class="col-4">
-				<div class="year-info">
-					<h1>1997</h1>
-					<h3>Vestibulum vitae mattis turpis fusce aliquam eu aliquam</h3>
-					<h4>Non ut consequat hendrerit neque at</h4>
+				<div class="col-4">
+					<div class="year-info">
+						<h1>1997</h1>
+						<h3>Vestibulum vitae mattis turpis fusce aliquam eu aliquam</h3>
+						<h4>Non ut consequat hendrerit neque at</h4>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -106,5 +108,137 @@
 			</div>
 		</div>
 	</section>
+	<section id="perform-in-theater">
+		<div class="container">
+			<div class="theater">
+				<div class="col-4">
+					<div class="theater-tittle">
+						<h3>Tours</h3>
+					</div>
+				</div>
+				<div class="col-8">
+					<div class="theater-held-year">
+						<h2>Ziaul Hugue has perform at the world’s leading theatre</h2>
+					</div>
+					<div class="devider" style="background:#3b4244;height: 1px;"></div>	
+					<div class="year-with-info">
+						<div class="col-4">
+							<div class="theater-year">
+								<h3>1992</h3>
+							</div>
+						</div>
+						<div class="col-8">
+							<div class="theater-info">
+								<h2>Elit pharetra dignissim</h2>
+								<h3>Dignissim egestas congue dolor netus nec eu, ut quis aliquam phasellus eu lectus arcu eget tellus commodo eleifend augue mattis sed.</h3>
+							</div>
+						</div>
+					</div>
+					<div class="devider" style="background:#3b4244;height: 1px;"></div>	
+					<div class="year-with-info">
+						<div class="col-4">
+							<div class="theater-year">
+								<h3>1997</h3>
+							</div>
+						</div>
+						<div class="col-8">
+							<div class="theater-info">
+								<h2>Aliquam sapien sit volutpat</h2>
+								<h3>Dignissim egestas congue dolor netus nec eu, ut quis aliquam phasellus eu lectus arcu eget tellus commodo eleifend augue mattis sed.</h3>
+							</div>
+						</div>
+					</div>
+					<div class="devider" style="background:#3b4244;height: 1px;"></div>	
+					<div class="year-with-info">
+						<div class="col-4">
+							<div class="theater-year">
+								<h3>2000</h3>
+							</div>
+						</div>
+						<div class="col-8">
+							<div class="theater-info">
+								<h2>Le nunc neque</h2>
+								<h3>Dignissim egestas congue dolor netus nec eu, ut quis aliquam phasellus eu lectus arcu eget tellus commodo eleifend augue mattis sed.</h3>
+							</div>
+						</div>
+					</div>
+					<div class="devider" style="background:#3b4244;height: 1px;"></div>	
+					<div class="year-with-info">
+						<div class="col-4">
+							<div class="theater-year">
+								<h3>2003</h3>
+							</div>
+						</div>
+						<div class="col-8">
+							<div class="theater-info">
+								<h2>Facilisi egestas urna</h2>
+								<h3>Dignissim egestas congue dolor netus nec eu, ut quis aliquam phasellus eu lectus arcu eget tellus commodo eleifend augue mattis sed.</h3>
+							</div>						
+						</div>
+					</div>
+					<div class="devider" style="background:#3b4244;height: 1px;"></div>	
+					<div class="year-with-info">
+						<div class="col-4">
+							<div class="theater-year">
+								<h3>2011</h3>
+							</div>
+						</div>
+						<div class="col-8">
+							<div class="theater-info">
+								<h2>Scelerisque arcu diam faucibus</h2>
+								<h3>Dignissim egestas congue dolor netus nec eu, ut quis aliquam phasellus eu lectus arcu eget tellus commodo eleifend augue mattis sed.</h3>
+							</div>						
+						</div>
+					</div>
+														
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="Upcoming-programs">
+		<div class="container">
+			<div class="upcoming-show">
+				<div class="col-6">
+					<div class="upcoming-show-benner">
+						<img src="media/middle.jpg" height="400px" width="80%">
+					</div>
+				</div>
+				<div class="col-6">
+					<div class="upcoming-show-details">
+						<h3>Upcoming show</h3>
+						<h2>Risus etiam dui</h2>
+						<div class="devider" style="background:#3b4244;height: 1px;"></div>
+						<div class="show-details">
+							<div class="col-8">
+								<div class="show-info">
+									<h4>Ultricies nibh morbi amet fames in enim turpis aenean neque commodo nisi, tristique et nulla tellus.</h4>
+								</div>						
+							</div>
+							<div class="col-4">
+								<div class="show-date">
+									<h1>01/01/2024</h1>
+								</div>
+							</div>
+						</div>
+						<div class="devider" style="background:#3b4244;height: 1px;"></div>
+						<div class="ticket-button">
+							<h3><a href="#">BUY TICKETS<i class="fa-solid fa-arrow-right"></i></a></h3>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<footer>
+		<div class="update-tittle">
+			<h3>STAY UPDATED</h3>
+			<h2>SUBSCRIBE TO MY SHOW UPDATES</h2>
+			<div class="email-adder">
+				<input type="email" name="Your Email" placeholder="Email address">
+				<button value="SUBSCRIBE">SUBSCRIBE</button>
+			</div>
+		</div>
+		<h2 style="font-size: 15px;color:#0000FF;font-family:cinzel;text-align:right;padding-top: 50px;font-weight: 400;">DESIGNED BY TONMOY DAS</h2>
+	</footer>
 </body>
 </html>
